# Customer-Churn-Prediction-UI

./: README.md  main.py  main2.py  nb_model.pkl  pyproject.toml  style.css  utils.py  xgb_model.pkl
